--- a/Simone/CSS/styles.css
+++ b/Simone/CSS/styles.css
@@ -507,6 +507,25 @@ ul li {
     content: "";
   }
 }
+.animated-box {
+  margin-top: 100px;
+  font-size: 20px;
+  animation: fadeInDown 1.2s ease-out infinite;
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-25px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(30px);
+  }
+}
+.scroll-down-arrow i {
+  font-family: "FontAwesome";
+}
 .bas {
   color: rgba(255, 255, 255, 0.774);
   font-size: 24px;
@@ -754,13 +773,17 @@ textarea {
   min-height: 150px;
   border-radius: 5px;
 }
-footer a {
-  color: black ;
+footer {
+  font-size: 17px;
 }
-.footer a:hover, footer span {
+footer a {
+  color: black;
+}
+.footer a:hover,
+footer span {
   color: rgb(32, 201, 151);
 }
-footer .row{
+footer .row {
   padding: 50px 0 40px 0;
 }
 .client .row .sq {
