--- a/Simone/CSS/styles.css
+++ b/Simone/CSS/styles.css
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 9999; /* Ensure it stays on top of other content */
+  z-index: 9999;
 }
 a {
   text-decoration: none;
