--- a/Resturant/CSS/styles.css
+++ b/Resturant/CSS/styles.css
@@ -146,7 +146,7 @@ img {
   align-items: center;
   background-color: rgb(249, 245, 245);
   width: 99%;
-  margin-left: 1%;
+  /* margin-left: 1%; */
   height: auto;
 }
 
@@ -187,10 +187,10 @@ img {
   width: 95%;
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: center;  */
+  justify-content: center; 
   align-items: center;
   margin-top: 2%;
-  margin-left: 5%;
+  /* margin-left: 5%; */
   gap: 25px;
 }
 
@@ -198,12 +198,14 @@ img {
   background-color: white;
   border: 1px solid #ddd;
   border-radius: 10px;
-  padding: 15px;
-  width: 300px;
+  /* padding: 15px; */
+  /* width: 300px; */
   height: 400px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   position: relative;
+  margin: 0%;
+  padding: 0;
 }
 
 .cards li {
