--- a/Photo Slider/CSS/styles.css
+++ b/Photo Slider/CSS/styles.css
@@ -14,3 +14,26 @@
   left: 10%;
   top: 60%;
 }
+.layOut {
+  position: absolute;
+  z-index: 999;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -25%);
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.imgLay {
+  width: 800px;
+  height: 350px;
+}
+
+img {
+  height: 100%;
+  width: 100%;
+}
