--- a/Photo Slider/CSS/styles.css
+++ b/Photo Slider/CSS/styles.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
 }
-.desc {
+/* .desc {
   background: whitesmoke;
   width: 80%;
   position: absolute;
@@ -20,6 +20,16 @@
   align-items: center;
   padding: 10px;
   z-index: 3;
+} */
+.desc {
+  background: whitesmoke;
+  width: 80%;
+  position: absolute;
+  text-align: center;
+  padding: 10px;
+  bottom: 20px;
+  z-index: 3;
+  left: 10%;
 }
 .layOut {
   position: absolute;
