--- a/Photo Slider/CSS/styles.css
+++ b/Photo Slider/CSS/styles.css
@@ -5,6 +5,7 @@
 .imgBox img {
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 /* .desc {
   background: whitesmoke;
@@ -30,9 +31,10 @@
   bottom: 20px;
   z-index: 3;
   left: 10%;
+  cursor: context-menu;
 }
 .layOut {
-  position: absolute;
+  position: fixed;
   z-index: 999;
   top: 0;
   left: 0;
@@ -65,6 +67,7 @@
   color: whitesmoke;
   font-size: 25px;
   margin: 10px;
+  cursor: pointer;
 }
 /* .icons .iconX {
   align-self: flex-start;
