--- a/API/CSS/styles.css
+++ b/API/CSS/styles.css
@@ -5,16 +5,15 @@ body {
 h1 {
   color: aliceblue;
 }
-
 .box {
   /* background-color: rgb(199, 167, 228); */
   background-color: white;
   border-radius: 8px;
   height: 500px;
   overflow-y: auto;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
-.imgBox img{
+.imgBox img {
   width: 100%;
   height: 300px;
 }
